--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.4.1",
     "fs": "0.0.1-security",
     "hammerjs": "^2.0.8",
+    "handlebars": "^4.0.11",
     "path": "^0.12.7",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
